--- a/SistemaRestaurante/View/formClientes.resx
+++ b/SistemaRestaurante/View/formClientes.resx
@@ -117,4 +117,226 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnHomeMesas.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAUOSURBVGhD5ZtLbBtFGMcNV15CvA6oRyReEiAhEIIzUtRmdy2wRCne3VQlrVJQgSISiQaMoJCU
+        8BQI8bgB4hIIcACJhzhVQrQItZVCS9LsrknTpMJNm8SRE2wP30y+JN7xeJ9e28v+pb9ie76Z+X7Z9ex4
+        djbVDllbH72aGt/+PzTTvf1aS9IzpqSNWIr+tSlrJ8DnwYRzwZC14/B3jMXK6sPTafUabKazNSXtusGU
+        1GdMRfsdACo1UH5N6x6Bf8TTk+ns9dh852hKUe8xFfVLSPLfmqSb5VXwaF7K3o3dtU9wNO+CZH6qSS5S
+        G4r2w1R65x3Yfes00bXjSkPR34YkynxSLTA9i948Ke28AtOJVlZafcCStTyXRMtNc7Ak7X5MKxqZstoH
+        na3wnbfRJUvRejG95onkcpcC7LuCDjvCMJq/Q3PEdMOJpFKXGJL2oaijTjKc4h/QXDHt4DJl/X1RBx1p
+        mLhg2sEEl50nhA13sA1Z3Y3p+xMdAaGBKCYSUXvVTKv3IYY30WscVJzkGoqTT80+mL0McdwFFd7jGoid
+        4Qx9C3GcZcjZe6FCmIm/o63M46Tw0afMVmaXMKZJLsNs8E7EaiwI/JGr2BTnt+8hF74YI5WFRbIu+pp+
+        RstEdUJb0r5DLLHotFFYMYRFoLyiBHecfsKM5RtRpSD2AsorIvCvEM+uSblnCxSG/u4GAeXVZPDK39vU
+        GxFzU4asDwiCPZsNRp98Tsrn5zFtsUonJ8ncSyPgN9hrJ5UL86Tw8WfhBzdF24+Ym4KCo3WBHuz1iC4f
+        +YOcHXiF1Zl5apCZvj47cJCVOalycSHkEdd/Rcw10QU3KKjWBzZ2ENDZ518jpfG/sASONrymn9EyGhMh
+        eNm2SgqH/CFBkNCBQA8M2UB5MXCIobFRgcM1WUFc+P5K2rAoiHf+sb3se+Wk0p8TZO7F11m8GyivWvC5
+        3Ah8xyewRKzyPwWS39Fny7GRLUV7FXHZ5ehbURDvM3392FW92BHtf5nFzQ76A+XFwKEN2pbbEZ/e85wt
+        RwePIS4bsE5xhUKLgJsJyssLuA/gccRlwAtcodC1wHbQ4aaC8loDH2Z98eA+gC8w2LX1Km8jNB0kln45
+        TGZfOMTe00vL8tFj2HX0on3N7DvA+qbjRPHwbyT/yG5bjg6usCUg/O0rCnD1wvc/YyqtE+1TlIsXn8tk
+        Lk8esJ9TmrcbcHVlhVQWl+pMqlXmarG4aYj1ohDA5Y1VTXizyBV6shvwPEwORPUqS0VSKRTIua6uDV8c
+        GsJazgoBvDZoUcGbca7Qk2MGfAJxGfAYV+jJMQMeRVzvU0veYYCri/CbN5fbcHF0FGs5KyiwbWqZlzRJ
+        FOTmMMBBFfgIS9pWxE2lTmd6r4IPfd/rjRHwat39ZPjQ9wJAfIC5BQAqthlFGNzYcQG2FP1JxNwU3S0D
+        hb7uJcUEeHUi03MdYtrld5k2JsDiZVoq3JXjeZp5Zu8A++XUyNO9zwrr0XUsUbwX0z5FbTZw1XXXDwRF
+        cqulLXa71UJlyT23QjDdDCZuJD4und6m34RYzjJl9ZCggZhZP4g47krcDXGqfDp7O1Rc5hqKg4tWt3Yb
+        YvhToja1rMtQ9Jyo4Y60og9i2sGVuI1p67JktV/UUQe4aknqPkyzuUrM5tJamensLdARfX5BlEDLDPP+
+        40a3fjOmFa0StUG8Vol5BIBXYh7y4JWYx3hESsSDWl7VvkfxUqn/AIiuXUIVRJ7VAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnBuscarCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAIkSURBVFhH7ZZLSxxBEMfHaGJABQ/x4jdQc8tx7Zm5RCIoSJIhQjyEHNbu1hUl+QBCcougH0EP
+        ggf9IjnmgYnPm4/uXgMaCIngWNVbYh7ids9EF2F/UOzuv7uqune6uiaoc2PpL603M2FGQqFWQqE3wQ7I
+        4LtZDrl+jnNo+v8lEiqBJNuQLK1iW4zvPyG3/CRJ2hhyM3eeQH1kUk8Vxso9cXHnnjV+cB+1SOhPvy1k
+        Fn0pTHZCqWco4E/GzfhlQXGMCVWCub/I5x0NZQOe99BZ8mi0/JDkqoSy3Ic+YCeR1IMk+9GTpHeY0Bu4
+        APhriyQ7E3EjaPFrD4rpbZLdYVwP2wDcfAim01skO2PPjtCfKxtQCcnugOOSdeZqgiRv8GDaTQi9SJI7
+        4LRmnaXpIskbrI5KDL1KkjvgeITOsVStJHlTeKnb7AKEPiTJHXD6js59r/daSPIm7wJyPwK8rDAGVNEX
+        ktwBx9oewrxlGE+nTXj47CaylGHeiwg64yvafbaLCMl6FUPlPAKfY7CTXq4HSPaHlXY7IMju2SKgHY9V
+        bUbQsGAuNSPzhob8scnh+dtAUu/RIsAq7ZiNlrvjF9t30fC0/9OOuXkbBGkDhfPjj+Twib+ZVE9dX0ig
+        dB9TKH8uSk5DlVcyWx1qAcax0fwgg+9qPpTqWa5XssK47oRgX8FwJ+/jyW/tNHT11JPXJDkSSSNt8r8O
+        3LUCVy6vWfI6108QnAJDft6BeBomJAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnGuardar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAokSURBVGhDzZp5UJT3Gcfp9Jh2Os30j3olaYs22lg0xUk8YiJK1OaYxumk6UymNk1tp1i11gNE
+        FJsqlYgHCOMRNBCFiAeiEkSJgCCwiMCySDg0gAvL7nIfgiDLLvD0ed79/V5+78sCi8DUZ+Yz2by/4/l+
+        39/5hriMJioBJhttsMxsgxUiDWNE3Z/JBm9QLpZ2fMPYA++ZrNBttgLUInU2gHoEhUjQb4KeE1THEbyc
+        1xfb83aUA3NZMOfvWfrxC+w8hwvhAtTCSQAHhThErKM25sDQbZZ+/AI7Pj1EMgkSaRSoIXpUqOqIxrgp
+        RQ4rRLL04xctAM9g5/swWWwtgvP4EgoxyMKZWIOT8PqCsUzql6AcjTbYWw/wQ5Z+YqMK4PsopoSLq2ZU
+        cSwq2HNeTzCVwLr8/wUKuiiLR7F6xoMh4OXcGDN1d9zfvukxPI/z9WWiif2TY1BRZYU1KKhHFF7J6bZT
+        weD/zstFY2SKGbKPEJtufO3wdcPXJU5pK5bfqgX4CZM9EFi4CPmGGlMDvuBYQ3kd8CnE375ogIsuHwHZ
+        nNBeNMSmm5STcqvNyJtLD+xj8u1RBzAJG7VwE9RINHGzqRf2FHfDurwuePd8DbjvvSuz9WwJnE4tHTWx
+        dyohobhGJkjXCmHfWKCss39YMwQ3g0aCmAV74IPV6sr0mypH6nvg1wltMPdLO9MP3odJXhkyQRd0UFZW
+        5hQlJSVQXFwsQb/Fso3ptVL/y5PbIaulb5AZ0iLoe4RmEnCz+TGzYA86QfloiMNnwKFekPgQ5sS3yUwP
+        LofJ67Nl9qEREuUM58+fh7CwMInExERF2YY0s5zDI2mwGXrRqMmCZ8t8Jntw0BmB4s3iaFDD7NZemHMF
+        OxeYHlIJk/+VJ/NJbKH8lkciOjoa9u/fLxEfH68oW59qUuTxuN4Omc29shk2xbRM8tBR2wOz8RBKR0MW
+        Gg1qmI5rY85l7FhgRqgepmwpkAmMvQtFRUVOERkZCQEBARJxcXGKsvUpaESVazHOhvRGuxk2xYYfEUdB
+        h11wqWWtW1wriEwPrYKp3oUygTgihYXOER4eDv7+/hI0zcSydTdqFHk4r199CBqcGeIUY2vFipTi77VM
+        8tDhFtvm7nYBOxSYcbgapm0rktmLRnQ6nVMcPXoUfH19JWJiYhRl65LQiCoX53fJHYoppl7PaO4fTLLj
+        cItpc//VuRYQmRFSpTDyX1zsWq3WKUJDQ2Hz5s0SUVFRirK11wyKPGry2/scjQpf0+VMsuMgI7NjWkDE
+        9ZBeMbUCzmkhLy/PKWi38vb2liAjYpnX1WpFHjWp9Yq1oh6VR0yy43CLaXSf/UUziMwIrYapW3UyGyO0
+        kJub6xS0awUHB0tcunRJUfZenFGRR00qvnq6mwk72IARK0QxyfbTHQs/omMfKwfhdSEo3mBNezGqGURm
+        RTTgSOCOtSlfYt6uPMjIug23bz858Rn58FJ0kyKPmhRUTVcYB9NL0wAwxW6iF97Ghx1USJVoCKkRNX7x
+        c0yg4oUjNTDNpwAmb8iReHNvDlz8Khs0Gs2oyMzSwKmUAvA8Y3aYR+Tg3a61eCdbgYe0BH3b1/WAGwB8
+        WzKBP76Dehv42cGN0CUuGb9yfhnRNCSzTjbAzBP1MnM/qwX3iOGZd6peZm5ko8N+HTHzZKO7JHiooIOQ
+        5ho3QkMnGpl1ovGpYEQjbXjxQiNWh0Zw/GYex06eBo6NYIQCjewf0shRnD5PA84YwXXyLTSyxmiDS/jl
+        l1KNoJGU+CrrnRfCGkBk0WdNUIaXsomKUux74UncUFR5k0026eXSS8aX3YYb0+dagO8yC8PHzMON7r8I
+        qQeRwIwOlnLiYu+tDkVOQmVEmj24025iUocP1wMm9xkH60AkLPsRSzdxQTnUeW+gcm6En+5oJJxJHT7I
+        yPSgOhAJ1QwYsVgsUFlZCeXl5WOC+qC+eFAOdV4ywr/pmZF+3FR/w6QOH66BaCSwFkRCMweMWK1WMJlM
+        YDQaxwT1YbMNrDvKoc57sdySXG2BWJxWsXj7iDb2wjtM5sjhutvk7hpQCyKhGRM/tSiHOi9pYbJGH9T4
+        5/8xg8jh9Ilf7Ls1FTAv9grMTzoFi24dg4XJEeCRvy9qRZnfipe1Xs7tVGK47jS5/2yXCUQOpw0Y6ezs
+        lD5TxS+9J4H66OrqgpKuatigPw6epX7DUb2s1G81k+hcPIdGfupnApGQ1AEjtEbMZrM0x8cC9XGu4RYs
+        L9kBnsXbneJvlUd097o7/i7ffMXAE94Tt7TjuGXTgoq9fM+S/LyPEURCktuZjfGLM41psOzr7aNmkz4S
+        74h9HXgBWcksuLjgvX450k93fLrO0z6dWmWF57bUKAj+Smmkr69P2nGelKJ2PXgW7YCld7c/ERF1WaT3
+        a2YDjfTCCf4xz82k4ifZsxsNCoKvP2QWANrb2yEnJ8fhx5KzfFRwAJbqUNQT8k7RbrjX3dnObOB13gZ+
+        9CHPzdAl8iYambbOoOBQ4oAReqM0xx2dDc6QqS8AjwJfp1mm84MDhjjwqYhUPN9vuKZjNlxcjAA/QANf
+        ohkbGaJRSdP3wFQv/EYXOJiAF/9xitO1qbAk39cplmr94EazTmpn6++FlQX+cpmndkc6szEQpQDfw2n2
+        AZrpS3/QA1P+WqXAK7xR6mw8Yk/lWViSi2IYnnk74P3CTxTPiKW52yGpCe+6LLTtFeCBz4Q6NUz+4MAp
+        psvEi83kP+sVTPuLHgJjWyEaD8ax8oHmU3g9Z5tMcpP9jZ+vzZCfeeT4wvXGfOk5RWH7A1iR669oh1iY
+        bGXQ5y+OSKfxcT88u6YKJn2onxBeij4Br2Vvk9G04HxgccaUDkuyfSGxIY89sZtYnuOvaCOh2VYnCcdb
+        5Zt4GbuK3Mdt9wGuDyutEVorAfFtMBnNTASzj8XA4kwfmbdzPobyTjOTDVAh/NY9rIQ3sncq6gvcdsH1
+        /D7e8/v5f/zid33atbiZ6Dtd8KdPG2FVcL2Cdw8N5rdOQnXfOpEPr97yUbBSswtK2g1Mvj00zWXgkek3
+        qK7Av10qu6GU/w2Pf31xM3SWkBnajmlbJlP8nCGj/ODk/3MAteVQX44Q61RZemFVdiC8moZiBN7KwpF5
+        ZB+NglYciYydg+pwFqf59C5I3TrLpaIbmvkfJYcyQ6LJABkZyhA3JRpziFCP2lwwF8KiFO9BeKbthH8W
+        hMOSm74Oyzkf5h65Ka2P8sdwVfwL63Bm+Og4MqQ2NRK8P2JPyWVYeMN71PwxJ6w/vbV+jmTkngVmlXeD
+        Xm2G/zFfMoTJRjLETYnGhoLX4+3MPb3gU/gFLEja6jR/yArpv15fvVMyweM+wI8qLLAKjXhxcCeTMFgH
+        QCMyKEimYYxQHyZr39pt2jNnX0va/mh+4lYYioXXvG2rs8KSEuoq3Jj8pzMWXt/4zPyELetfSdiSjtQj
+        8MrVLQ/xnzp8/vGiK5tdWVUhXFz+B26jSrlhLvqXAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAh4SURBVGhD7VpbbBTXGXaSKr09tFJbVX3JW6Xe1aoPVfta9aFSX3qhUqpKTYrXxnYVaBBxbQOx
+        hWlouAUbAw42Sqs0kg2xDQESAm1KHwgGUglTx9her9d4cTB2vHh92ctc/n7/2XOWszNndhfjQFX1kz55
+        Pee/fN+cM2dmPS77n8Zwmr4ykqLK62mqHZUc0zjOtLKcWEWKmrK+3k9pYD1DafrV6AJ9QUoNBgcOpygz
+        kiZCsmAYREGKgOOZLKOSE9pnphovhXoNvQ6PcS8m9+X+rIM1QRtdT9E0dH5TSvaDiB5B4IwywQW8JvTm
+        emO9uRIQRD1O5QbVVbW8ZsAeKduPq0SfRqDrnQXVMKiRaqYYTroUjd2h2EAsj9HYvBhTtRVVfZMhkxlh
+        KEVXpGwzwin6Z7FZMBmYGP+QZnquUOLFE5SuOUKZipeN5DGOud17hSaic3mmvIZMZphyZnZKyWaMJemJ
+        sQydQ2LGW9BXNOnQ1IVRWmx+HSLbV8TF5h66+W5YzJTXkNcME+NJnOyXR4k+LiUXB66Zx7Cb/BCFEsqA
+        MjE5OEVLz3dBzKFV4VJjN90YupW3pNHTBSsniT4pJd0fsC326LMw2/0uZSoPQsAqEzVnjvWLHqJXmmJS
+        wv0jSvSlSIZuibM0n6bErhNmEavI+T0nKZLIsBE7atH3pZTiGCL63FiKDuCsX8VUjmEpjWFtip84tixM
+        xFNYz0fR6MAD4eL2Y6InelvQMO7Vxb/jeD+WYgNfAsIIfrnAYjHou8B4SfHZWXjhGBq0PVAu7OihsUVL
+        LDPW4dXHx3gMm9PuMmxjX9UDvSZ47M6ht1B4/0Ph3JFz3g1A6MvTiKWf3W7T5AS5vXkpjIKtD5Wx9yI5
+        MwE6w2Jp4SGtkwN8SwoXd/K5ThTbF8x1LWTV4gZYxU0N44WIHOsPyEUN47hkEjHhBf8Sk1pdbEZrhRFc
+        LI/iwFMYaMPP9kgqy/grZy9bFXspkDWt5I7EkE7k3poju+GIOc5AjuUckYsaVjVOiCFO8fapy/qs/Ata
+        D+PE78V97kfCRBBoTePjVsXuD0AUMtM+eFwIyWEuAYGdxlid9uZOEavDbuszxiomN7VTeBn3lwz9HeGP
+        SJnFYVfsXmNV7EKRYNrb/oLTmRWSA5vZ3GGMZ/KY1wS5LtlNrxjjdd68NEK4TXRIiaXBCu08aoVepGJ0
+        Xj8v1WgQM3PYF8vHfCYA59g/fLEmxg+d4OWVxKxUYXl9b5zoE1KuGbSm+zErtCMOokBxOl3npCQNiSWy
+        G7HMZAx/5mN5wGxyrl6rEFMb9tFoKvtwKS/6+ahNP5ay/UiHdnzdCv0RyaXT6Tor1WkQZg4L+kwAnGOq
+        VYjRG7Piotd2r+kpok9J6fmwy7f9wg41073S6XpbStSwuJylBxxrqlGMNy9d991TJlP0ZSk9H06o+Vk7
+        tA2J906n64yUGgyOMeWWwukz/V4j8cDHfKe86Xk71ITEldHpektK9oPHTDmlcqbvvG5kesKmn0jZfljl
+        W5vt0FYkroxOYxtRCp28wDEeM+WUyqXNrR3hDH0X18i3Bokel5KziOLBEVP0NwwusNOZk+eRtHlFdBpb
+        cWEvSuUGYIxjTLml0KloeE7KzgdKP4pb/QhfNLwTsJHpdy6TE6q/dza1FDahIMzsM9coQru87mkpPR88
+        RfrDIhuJDUaQVHtvbHrJaMLtekPQB2Fmr7lWAVKo9gdSej4iRF+EiZRuJBJfJqeSEzeVxqY9ASZO5GL4
+        sw9sBrl5tQrTooraz0jpfuB78UYY4b9YiOXFu8LSdp76jcXZvBfB/vuE23XcF8vHfEgswMwuX6yJdvnG
+        C1JyMGDkO2wIRv6MWXFn+86QU76hMNfXE8XvSEV34faeNseDbt9pGaUBNZxn6ozx+fx9vZRbGmCkd2Jq
+        FmdhPZKfCaR78IhUchdu7yljrE6375SMvgu3rcMYq9GhivVPSImlAbPSzcsrAaFO+e+CWd9EZNlSCsT0
+        nTTHGege18yghlPXaIy7y5pXpbzC4N0Ly6sG10knPrt80d+IxMitqCG3vCqYL+wkOnma3JY283ghthxA
+        7puihnFcMVTtTF0Z2A1Nufcz0Fo9Cc1Sfhb4WrsRBlzvNsyzMvfaURSrfKj8sLs395qDNyPWxzpB3qA2
+        CBPDRJ/HYFINshn+zAlsJjKfpHRdAwqGHgpTDVtoLJHKPV+xLqVTnvRlfMH6bNlIhr6tAtiAPivKzI3R
+        KDlV61D4tw+UTvU6mhibyDOhTnieRn6Mf4foYwiM6kHKjDLChWIDg+SsW4sGv3kg5F6xa+8bl5TnEhhn
+        D2J5IfAbONCP4Nwf6lSgbuaDi/1o8BQa/fojpVP1NE31X86ZULPhMeHg2EXEfE2YKARsjOL9CBKWcjPz
+        7/fJepZ3kyc/EmZQe3JwyGtiaKIUwcWgvx/h4pGZOC227iJa+8tV5cL+PRSZvSN66DMRsWiTlLJy8PsR
+        PLrE9GWWm51rA5RsroOIn98Xk9vrafLaoG8pMeVSP1v0Tz9e8PdfFNqKIhdRhN9FLHt3MmVInbnYwFVK
+        tOORvPpJCPtpSeTYRPtL4mQoA7oJaUC/LuZw7D2M7wj8q4kOFHvNVFCZYSpDHKMbCi/bNDk0RLfPvEHx
+        Vw/TQtufaGnnFkH+HP9rB91++6SI4ViTAW9P70nkOOQVflyR79kt7xSrwqq4KqyKqwZ5piS5lqJ3TOWo
+        GsX6qPqolSm41HhwOEWL/N8FXjN6I++ZUo0UlcBC1ONVXVNtvZ40we/Y+Vtc9nVbEK6naQv/i4RuRjek
+        hHubqsY6dbGK3hiV6zXA5HjdgDRBw0lqlHILYyhNP4OZlpEUtSuG5TsTRTTKI0QIeo8XYlCO3of7Kg3Q
+        tB8neo2U+X/8F6Os7D/4FRVRT4nyZAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnEditar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAjxSURBVGhD7Vp7UFTXGcc2naadSZtpp+/ax3T6R6ZJOxEWFTBi9gELu3t3qSgKRjCAJkaRSJC9
+        9y6uPOT9kNcusMuCgAoIPsIuICLRqICvtlMbn2OIjyrR8ZFUCezj6znXwwbiRReE1c70N/Ob2bn3nO/7
+        /fac737nLnj8Hwhaf/8XWUogYihBhlrhWccoBV2M0stMU17ZapVgPhn2/CJR4fuSmhIkM5TXf5Bwe0ro
+        3KHs8HmQt9wf8t6aD+lhPkPonp1VCvpYpecfyLTnC4x81hwkcCA5ZPZQabQQ6tbJYFu84hFWrwmGzWG+
+        VmToHiub/Ucy/fkAI/ei0Day5kS8Ya+Pe1T8o5RDxhI/K1q1fq3c8/skzLMFrZj1Z2RicEvkAge/aH7W
+        rZMDXj1UP3dppaA5SS4QkJDPBDOQkL9nhc+z8Yl9EvE208WIIXOpn5VGNcUoBLEkrnvBUN4qVBfWGiSI
+        T+hEWBotApoS2FjVrFdIePeBUXrvzlk2z84n7EmsWBUI1e+N/QLSF/tYWZVXDQnvHqBe8QLaDg/0sZIx
+        YlwhNsGqvAGtJhS/LXReL0XbDNcMSeEeoAKfiRoct89Hi3wS8RbSIBOW3AjoNa3kzODHNb5nWh2EtpcX
+        JCpe/yVJM/3ATxmcFD99vimWj4Z3AyEz3I8TfrgyBu6fSud4qDwaNCHeUBsn44hjJim8Xidpph9qynP2
+        WCNyMLwTCIWRCyAfdfIR5i6bD2lhPpzAyngp9LdvcJrA/OJ4KmwMnQNl0WKoRzHwOLXCy5ekmX6wcu/f
+        46Q1qGCxGdTgAG03KHlXDOVxgU5uY1XQVRIJn3UkjTEwmsWrRYCaKWxd+3BFNHLBn0ia6YdW6/Et1Jnv
+        42LHBYu/1cudal6hT6IhMQgywnwdlasCkBGBDR86SRr3ABnZmx3xhi1ziZ+jLE7CK9IVmmgZ3n72/Lfm
+        OxiVoIeEdx9Sw+eqkRlH6iIfMKmDeUW6Qs7IYh90ZBHYtWFz0kl496B8g+iHZWrRA/zEQSdZTgyfSFeI
+        56L+gXqLAMqSRIM6reSnJM30oyxJ4llGi6AxJYQr0Kc1gmPUaZSAY5YmCd13gMQroqOFjiNb30Z9QPDU
+        RnCn/7h6BeCYRVrpD0ga90BPi5vrMxTWHdkqOFIXzSvSFeK5OAaOhWI2kfDuQ1Gi/6/1rOS6ITnQ8bRG
+        DNpAh54R/1vHvPkrEt69QFvsN8jM5Y+qo3hFusKDpijQa8SflTKSmSTss4GOFpV9WLx4mE+kK9y9ZdFw
+        qVpUTMJNGod9fV/qW7DgLycCAn5BLk0MSERIhUYyfPdYCq/QxxHP0Wsk1hJGRJFwk8JRoXB1j0j0VY9Q
+        CJi9ItGOo3Pnfo/cdg1Fa6TfRdvrdt+2WF6xj2NPfQzoWfGt8ljP75BwE0bx+5p9LeGRjstxcXA/Nxdu
+        siyckEqHkKEsMsR1oFWJKWcltqvdrp+3rhxQg46R2NHWXEHCTBgbM/Wp6hwD0Ign84pgsKCA49X4eOgT
+        iwfIMNcBHh4z9Iyou2pTEFzpGv+kO8LLaEzVJikyIu4iISaMrMKs7XRela3r5EVo6T7JmenNK+aMXE9M
+        hD6RaHJvm3paIkbC8FaBQzUr4OaR5EcM4GsH0RMOj9EhVrABIjJ9Qigq0rSrcw3Q3nsGzl2/z7Gp8xhn
+        5kR2IfxNpRpCRurI8IlBx4r88RHjKOoLW9NlgPoCdFQsg1tHN3LEn/G1rWkybgwei+eQ6S6j0yBNaNAt
+        d7D5Bqi3HHEawWzo6OXM7IqIGugTCn9MpkwMI0YudSTApfYEOL5jJdRulnOCMWuRueMNK7l7eMxkjHQa
+        gzYi2m6dzYZPz2yF5EIjmHZ1w1lk4vTle5BrbB5OTS+5b4p97zUyxVXADAVj9qLoViaWLtiDxV2wvP/Q
+        DOHpPWs5jr52wRLPGYlltnTI1a0JcqbNLzS08dskKC9Gm4DbtRwvnq4BTYERavcehILqFjuTV9XP5Ne4
+        fjpQane9TDGt6ZSm7aaCNkNYWvdgdMERW0nyX6FNFz5GNB8tZUuhJHkhrCzstS9J/2hQQVscSsZyR05b
+        0kK17T8iaZzA26mzUmofOJ3hNDHCS/+qAjavEtILS4YrSla7+pqMVoA2x1GM5YuF2n1D8cZPIG3P55DT
+        dpdj/vbDUIbq4GNU7HwGMA+hUy4ek9fQ45yX8eEtWG86B4tSux4gQ19StDka58IZnStx5uuVGOHwDQMc
+        bVg81FQe2a/TJbzKSXwS/LXdLyIDOyimzRZfdQayzXecQkazwLQT9wdoKVgEp5regYtt6zniz83oGr5X
+        WN3COzfbcgfWV50FFds+jPLsNVcoNj80kTWuif3GoLOWKulPiMzHgzPBtveGbuoc2th0jVfEaOY3HofS
+        nHXcNz9S7NhAWW485Ded5J0zmqm7bkBWQaq10xjsGN9E2PB+Y/C5Dp3Lb5QwQ8m2NS/Udg6l7f56G7nE
+        1huQ1/xPjjmtA/xjeFjbaIROowwea6Iq+PwETHh44KcKMmJNabnOm3SqOS0mgj4w/1zBWAZxIfIlnWo+
+        NBEMNz8Z3wS6f2F/pfBnRKJrUCSZCxenHfgq28KfeCpZb9wwPSZQgb9AsW33EqrP8yaeStYbEqHTEDSu
+        iZ7GJZMzgUGpW+dRjNme2XqbN/lUscqQAfsqA+HMgbWPmLB+boK+neH46XS1yxD0WyJtYkDdVhOW3j3I
+        l3yqmLv3Cug0UujdFgEHTDK4ekr7DRMR2MS1SZvAQEVesTz7sJ3Z3g/TxcwiHZhSKbh3bBOcM6+E/QYp
+        XENmsIneneHoxBz0oE0X+DsiaXJAXdyMz1HTRYreC8WsAo41rHK+r5zeswLVihQO1oUgE1Jrc6Ebf3Wc
+        LGKWSZPzEyXWO72bnEY+3fcB7CmibG3lUltjjnAuGfp8QyqTfRkop+BSlwb+0bIGtmdRD9Abpk3PSpq2
+        b5bMJsOeb0SGBSz19pcDpkgqc6CVuVtKi1OKE8Xu+0PoVCBEFXQem3gzQDaoUskq/JXKl8mt/x1ERVEz
+        KSr4wrIw6TT/y4aHx38BP862hXl/uGUAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnRegistrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAjfSURBVGhD7VhrUJTXGcYmbZJO0/ZX22mbzqSXH21nOhNh1aBGUpcVDXvBdhVF2AUR7yJVdvf7
+        vgUXBS+A6wVZLntFLsqiBpVdREUTb2gZrZPaptFoiUljEh1jMlUuy+7b93wcGLYcZS2w+KPPzDPsfOec
+        9zzPdy7v+xHxfyBMMTEvGpUSqaCUbOEUkTWCStIqqKI8vDKqkEuQzKDdnl3oFFNf5pSSXEEZ9W8U7t+o
+        fr27MGk6bNfEwPaUGVCQGN2NbX6jSnLJqIr8BR32bEGQT5yCAj/PnTu5uzR9JtSsjYe6LMUQula/BZsT
+        p/rQ0FfG+Mm/osOfDQjyKCVuI1/Rojf8tZlDxQ+lHLYsmObDVeswySO/TcOML3jFxN+hic5d2jcDbNFs
+        1qyVA1k9PD8PeJXkoEEukdCQ44IJKOTqtqTpvSyxw5Fss7IlsbB14TQfj2dKUEgyaNzwQlBOSsBz4atC
+        QSyhT8PSdCnwSkmvMWHir2n48EFQTWosSp7uZwkbjpXL4sC1KvgFFMyP9hkToqpo+PAAc8XzuB0elWfI
+        gsSEQmLCmDAJcDWhZPHMgeeluM3ImaFThAd4wF/BBCfu88EihyPZQjlowlu8CC46l4pmyHVN2pwr5+D2
+        igKd4rUf02nGHuSWIZOS2+e/xbJoWxEHW5OmicLPWZfAwysFIs9UpEPO3ElQnRkvksQ0KKJeo9OMPThl
+        5ORgI3KwLY+Dndo3wYyZvJ/FyTMgPzFaFGjNmg0dx/QDJgi/bt8EG9RTwJIeC7UYg/TjFFFT6TRjD6N8
+        0qtk0io8sMQMJjjA7QZ7VsRCRWbcAOuMCdC6RwsftRiCDAxmyUopYDKFvWv6ViRHLvktnWbsYTJFfAMz
+        80Ny2MmBJW/19gmOKXQ42nRzYEvi1IB12Sw0IuklRSedJjxAI0cKF73Ru3XBtIAlU8YUGQqdfDzZfn5z
+        yoyAkCBpo+HDh01Jr3NoJrBpXjQ4ubeYIkOhaGR+NJYsEr8pcUoBDR8eVOil37Nw0kfkxsFKVhTDEhkK
+        yVjMH5hbJGAxSDvLTLIf0GnGHhaDLNLCS8G9ca54QEdqhMSoyVEBiVlqmBm+ApKsSBk/M3B+72LMA5IR
+        GyGZ/qwrDUjM3abZ36XThAflfOzB2i0K3/7CBDhfk84UGQrJWBKDxMKYDTR8+LBbF/PTcqPsji03LjBS
+        IzZTXKBciP20TPj9T2j48AK32M/QzO13XKlMkaHwXWcqlOfEflQqyF6hYccHZbzUcrRkfg9LZChs3DWv
+        p5STltBw4wcUMbcyR9bz4M8bmUKfRDKmPEfm2yNIlTTc+GH36tkv4Pa6f6kugyn2SWyrXQLlxth7FRmR
+        36Thxhe4KksqjLLeT06HXm99fIqDMkHmx62ZRsOMPyAiYkK5ID3tyJsDH7c+vtLt523s48ibjUZiW2mI
+        x0LtznopuVI/K8WWnZZi0+nxb6bGmr1A68wem/+LlfOyWBRGtgqcqUqDu+dzhxggz97FG470KUNWGmdJ
+        6fAhSHKs+43GoW/Q2PWdSH9GlbFrzb5NXStqTZ1pds6HpiDVYbiOf1dlVGSM3tYsM0pjSIlxAfPC3oJ4
+        wLwALZXJcO/CBpHkN3m2Nz9e7EP6kjF0+ABW7179gsZhKNHYdH7u7W3d9vY68N5sgeMdrUGsv9YI5nes
+        kO7iu7R2/S2tVTeFhhgZ+o3calkPt46th/b9S6F6s1wUTFiN5trrl4ptpA/LyAIr/8NUB3cZ335P9V8O
+        DBHPogdN5jeX+FPselyl7P/1vMEEheCJUvJNQga/4zARd8P7pz4zlNcOrxE5+NkNb5ZoZClvbpRzXl5l
+        aIpUm80vpdq5y6v3b+xu/MDDFP0k7j7jgBS7LpBi1Yd+latMb39fKTQVKHOa7yp4DyTmn+5M33G+d0/u
+        H6C5LClINItey0Iowb7p5jYfGUtiLNxl7lxSJfQ2/oNtov2zK3DzwS2RrHbCopMVATxPj5Kt61+lUh8H
+        XAHek6kUvF//0XS8O8v+d8g//AUUNT8Qad53Dix4Ds7iYWcZIDyDVS7ps72+bWDchgPvg8amh6rLbqZA
+        QmKgH6x2kf9shSx3frfWYdhPBQ9FjOn0iyrB61Yam3uzHO9DoefLASGDucN5gOQHOLRjHlxpWA4fNq8T
+        SX4fxGekbafrUNCYzDoX6A4VscVRhmQEWXv1oLjFmNczMaE0HruozjvRvaHhX0EiWDS726G0aK345vsP
+        OzFgKc4Cc8PloL6F3nt4jQpgb9/HFNbPUI0QrsQrGs+Kgcrvg1rtfk5lbG6Zl3eye/ORu0EihmXTZ7D9
+        4F9FFjV9zuxjanwPtHYDXrHHmaL6+TRGtp20kBxzllrog5xrWo9GfBsP3WEKGSn5A2dgWU1ekJDBB7uf
+        9zu/pDZgSBvh4PFlbXshzcl9Si1ERMzJ9vxIIXg71zk/YIoYDerczbDWvSVICBH2tBg83nW5HvD26qY2
+        IiIUBs/O+fmnugq9bBGjQcOBE7CqLj9IyEiNWC/VQqrd0PeffTzgz+MN9dV613WmgNGi8dBFLDOMQUJY
+        HGyO1T6YJDmmOg3XRSNKrmm6UvD4tzbdZwoYLRYc7QBSALqvHWaK6ufTGOEbi3rwAnGKRhS8Nyex4HQn
+        a/LR5rLqYig+VcEU1c9QjZDaS+vQ9ybb9PI+I4K3UlN4zi/s64CxZma1Bxa7BDh64xhTHGGoRkiZonVw
+        n6jdpm+JRrAM8ZAaKCwUjkJKxQYweXYxxRGGYsSNpT2W9L0auy5JNDEeWFSpj8Yrs2fPOVeAJXI4NuFq
+        Lq/JxY8ww2H8ZJ1Aw44PNPbsFHyb/uJTlYGWjpNMwSw2/O0IrKjN7cJs/p661PQdGm58gUYUuD06s+oL
+        emqvPvnjyvPhcShqLSc5w5dq13vT7LqXaZhnA4tshl+mOvT1pIpdVZfXVYQ3WkVbjVjmO7C4xO0HwpFi
+        H35NIg13NFZdqtqtfo4Of/aQ5jD8HM1kpzm4Cyj4C/xm8WN+eJjq5G5qbXpnSmV2/MDtNAQREf8BBuL8
+        7T1PkfgAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
